deploy/apk_build_v3_10.log

>>> grep -n "WidgetsBindingObserver" /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/lib/screens/home/home_screen.dart | head -3 && grep -n "pageSize" /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/lib/services/api_...
20:class _HomeScreenState extends State<HomeScreen> with WidgetsBindingObserver {
178:  Future<Response> getHealthRecords({int page = 1, int pageSize = 20}) async {
179:    return _dio.get(ApiConfig.healthRecords, queryParameters: {'page': page, 'page_size': pageSize});
210:  Future<Response> getChatSessionsList({int page = 1, int pageSize = 100}) async {


>>> sed -i "s|services.gradle.org/distributions|mirrors.cloud.tencent.com/gradle|" /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/android/gradle/wrapper/gradle-wrapper.properties 2>/dev/null; head -8 /home/ubuntu/6b099ed3-7175-4a...
distributionBase=GRADLE_USER_HOME

distributionPath=wrapper/dists

distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.6-all.zip

networkTimeout=10000

validateDistributionUrl=true

zipStoreBase=GRADLE_USER_HOME

zipStorePath=wrapper/dists



>>> mkdir -p /home/ubuntu/.gradle-cache /home/ubuntu/.pub-cache-host

>>> sudo rm -rf /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/build/app/outputs/flutter-apk 2>/dev/null; sudo rm -rf /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/build/app/intermediates/flutter 2>/dev/null; echo...
clean-ok


>>> cd /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app && docker run --rm --name flutter_home3bugs_v3 --network=host -e PUB_HOSTED_URL=https://pub.flutter-io.cn -e FLUTTER_STORAGE_BASE_URL=https://storage.flutter-io.cn -v /home/ub...
.2.13676358 v.28.2.13676358".
"Install NDK (Side by side) 28.2.13676358 v.28.2.13676358" ready.
Installing NDK (Side by side) 28.2.13676358 in /opt/android-sdk/ndk/28.2.13676358
"Install NDK (Side by side) 28.2.13676358 v.28.2.13676358" complete.
"Install NDK (Side by side) 28.2.13676358 v.28.2.13676358" finished.
Your project is configured with Android NDK 26.1.10909125, but the following plugin(s) depend on a different Android NDK version:
- jni requires Android NDK 28.2.13676358
Fix this issue by using the highest Android NDK version (they are backward compatible).
Add the following to /app/android/app/build.gradle:

    android {
        ndkVersion = "28.2.13676358"
        ...
    }
Checking the license for package Android SDK Platform 35 in /opt/android-sdk/licenses
License for package Android SDK Platform 35 accepted.
Preparing "Install Android SDK Platform 35 (revision 2)".
"Install Android SDK Platform 35 (revision 2)" ready.
Installing Android SDK Platform 35 in /opt/android-sdk/platforms/android-35
"Install Android SDK Platform 35 (revision 2)" complete.
"Install Android SDK Platform 35 (revision 2)" finished.
Flutter assets will be downloaded from https://storage.flutter-io.cn. Make sure you trust this source!
/root/.pub-cache/hosted/pub.flutter-io.cn/sqflite_android-2.4.2+3/android/src/main/java/com/tekartik/sqflite/Utils.java:109: error: cannot find symbol
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.BAKLAVA) {
                                                        ^
  symbol:   variable BAKLAVA
  location: class VERSION_CODES
/root/.pub-cache/hosted/pub.flutter-io.cn/sqflite_android-2.4.2+3/android/src/main/java/com/tekartik/sqflite/Utils.java:111: error: cannot find symbol
            return Locale.of(language, country, variant);
                         ^
  symbol:   method of(String,String,String)
  location: class Locale
/root/.pub-cache/hosted/pub.flutter-io.cn/sqflite_android-2.4.2+3/android/src/main/java/com/tekartik/sqflite/Utils.java:124: error: cannot find symbol
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.BAKLAVA) { // Android 13 (API 33) and above
                                                        ^
  symbol:   variable BAKLAVA
  location: class VERSION_CODES
/root/.pub-cache/hosted/pub.flutter-io.cn/sqflite_android-2.4.2+3/android/src/main/java/com/tekartik/sqflite/Utils.java:126: error: cannot find symbol
            return thread.threadId();
                         ^
  symbol:   method threadId()
  location: variable thread of type Thread
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':sqflite_android:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 4m 1s
Running Gradle task 'assembleRelease'...                          242.0s
Gradle task assembleRelease failed with exit code 1


>>> ls -lh /home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/build/app/outputs/flutter-apk/ 2>&1
ls: cannot access '/home/ubuntu/6b099ed3-7175-4a78-91f4-44570c84ed27/flutter_app/build/app/outputs/flutter-apk/': No such file or directory

!!! BUILD FAILED, no app-release.apk !!!
